--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Jason Sperske",
   "license": "ISC",
@@ -14,5 +15,8 @@
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
     "express-static": "^1.2.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
