--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
 node_modules/
+
+# Built files (should be built during deployment)
+static/dist/
+
+# Environment files
+.env
+.env.local
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
