--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
     "express-static": "^1.2.6",
-    "rom-patcher": "^3.1.0-b"
+    "glob": "^11.0.3",
+    "rom-patcher": "https://github.com/marcrobledo/RomPatcher.js.git#v3.0"
   },
   "devDependencies": {
     "esbuild": "^0.24.2",
